--- a/example/example.html
+++ b/example/example.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test Suite</title>
+    <title>Example</title>
 
     <style>
       #result {
